# Stare

./: .gitignore  CMDparser.cpp  CMakeLists.txt  Console.cpp  Console.h  Database.cpp  Database.h  HMMengine.cpp  HTMLgenerator.cpp  Stare.sln  Stare.vcxproj  StarePorject.sln  StarePorject.vcxproj  StarePorject.vcxproj.filters  StareProject.sln  Stopwatch.h  Tokenizer.cpp  Tokenizer.h  astar.kdev4  cmd.vcxproj  cmd.vcxproj.filters  cmd2.vcxproj  main.cpp  test_compare.stare
StareProject/: AIsql.db3-journal  BrianAIsql.db3  CMDparser.cpp  CMDparser.h  CMakeLists.txt  Console.cpp  Console.h  DataStructs.h  Database.cpp  Database.h  DocumentDatabase.cpp  DocumentDatabase.h  EngineStatus.cpp  EngineStatus.h  HMMengine.cpp  HMMengine.h  HTMLgenerator.cpp  HTMLgenerator.h  Makefile  PHPsocket.cpp  PHPsocket.h  StareProject.kdev4  StareProject.vcxproj  StareProject.vcxproj.filters  Stopwatch.cpp  Stopwatch.h  TestCreate.cpp  TestCreate.h  TokenDatabase.cpp  TokenDatabase.h  Tokenizer.cpp  Tokenizer.h  WordPairCountDatabase.cpp  WordPairCountDatabase.h  aisql.db3  compare_dickens.stare  compare_henry.stare  json.h  jsoncpp.cpp  main.cpp  (+10 more)
StareProject/.kdev4/: StareProject.kdev4
StareProject/Documents/: .~lock.MetaDataSummary.xlsx#  A Daughter of the Vine.txt  A Tale of a Tub.txt  A Wonder Book for Girls & Boys.txt  AChristmasCarol.txt  AConnecticutYankeeInKing ArthursCourt.txt  ADogsTale.txt  AMidsummerNightsDream.txt  ATaleOfTwoCities.txt  Ancestors.txt  Avojalka.txt  Black Forest Village Stories.txt  BleakHouse.txt  Christian Gellert Last Christmas.txt  DavidCopperfield.txt  (+53 more)
(+28 files in other folders)
